fix to release on GitHubPages

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
-    "deploy": "gh-pages -d dist"
+    "cpwasm": "cp build/vite-react-promise-worker-assemblyscript-boilerplate/assets/index.* dist/vite-react-promise-worker-assemblyscript-boilerplate/assets/",
+    "predeploy": "pnpm run build && pnpm run cpwasm",
+    "deploy": "gh-pages -d dist/vite-react-promise-worker-assemblyscript-boilerplate -r git@github.com:kubohiroya/vite-react-promise-worker-assemblyscript-boilerplate.git"
   },
   "private": true,
   "dependencies": {
@@ -28,6 +30,8 @@
     "typescript": "^5.7.2",
     "vite": "^6.0.3",
     "vite-plugin-assemblyscript-asc": "^1.0.5",
-    "vite-plugin-restart": "^0.4.2"
+    "vite-plugin-restart": "^0.4.2",
+    "vite-plugin-top-level-await": "^1.4.4",
+    "vite-plugin-wasm": "^3.3.0"
   }
 }
