--- a/asconfig.json
+++ b/asconfig.json
@@ -9,13 +9,13 @@
   "targets": {
     "release": {
       "optimize": true,
-      "outFile": "./build/as/ASModule.release/index.wasm",
-      "textFile": "./build/as/ASModule.release/index.wat"
+      "outFile": "./build/vite-react-promise-worker-assemblyscript-boilerplate/assets/index.wasm",
+      "textFile": "./build/vite-react-promise-worker-assemblyscript-boilerplate/assets/index.wat"
     },
     "debug": {
       "debug": true,
-      "outFile": "./build/as/ASModule.debug/index.wasm",
-      "textFile": "./build/as/ASModule.debug/index.wat"
+      "outFile": "./build/vite-react-promise-worker-assemblyscript-boilerplate/assets.debug/index.wasm",
+      "textFile": "./build/vite-react-promise-worker-assemblyscript-boilerplate/assets/index.wat"
     }
   }
 }
