--- a/asconfig.json
+++ b/asconfig.json
@@ -2,7 +2,7 @@
   "entries": ["./src/as/assembly/index.ts"],
   "options": {
     "bindings": "esm",
-    "enable": ["reference-types","simd"],
+    "enable": ["simd"],
     "runtime": "minimal",
     "exportRuntime": true
   },
