--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "importHelpers": true,
-    "lib": ["esnext", "dom", "webworker"],
+    "lib": ["dom", "esnext", "webworker"],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
